fix: remove overflow hidden

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,7 +145,6 @@ html {
 }
 body,
 main {
-  overflow: hidden;
   height: inherit;
 }
 
